<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AlarmActivity">


    <rm.com.clocks.ClockImageView
        android:id="@+id/clock_alarm"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:hours="16"
        app:minutes="20"
        app:timeSetDuration="400"
        app:clockColor="?android:textColorSecondary"
        app:indeterminateSpeed="2"
        app:pointerWidth="bold"
        app:frameWidth="bold" />

    <TextView
        android:id="@+id/text_view_time_alarm"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/progressbar"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_to_take"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/text_view_medicine_name_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_name"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_snooze"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snooze"/>

        <Button
            android:id="@+id/button_dismiss"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"/>

        <Button
            android:id="@+id/button_take"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take"/>

    </LinearLayout>





</LinearLayout>