<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close_black_24dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <FrameLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_medicine_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/medicine_name_hint"
                        android:textSize="24sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_from"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/sample_date"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_schedule"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp" />


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        app:singleSelection="true"
                        app:singleLine="true"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:ellipsize="end" >


                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip1"
                            android:text="@string/once_a_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip2"
                            android:text="@string/twice_a_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip3"
                            android:text="@string/thrice_a_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip4"
                            android:text="@string/_4_times_a_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip5"
                            android:text="@string/_5_times_per_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/string_time"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <!--<com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_select_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/string_time"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />-->

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/number_of_total_doses"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp" />


                <NumberPicker
                    android:id="@+id/number_picker_number_doses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/alert_type"
                    android:textColor="@color/color_primary"
                    android:textSize="12sp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_alert_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        app:singleSelection="true"
                        app:singleLine="true"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:ellipsize="end" >


                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_notification"
                            android:text="@string/notification"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_alarm"
                            android:text="@string/alarm"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_both"
                            android:text="@string/both"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>



                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
